# Tau

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  catalog_explorer.ipynb  pyproject.toml  test_vcc.py
.auto/: bench_tui_startup.py  log.jsonl  measure.sh  prompt.md
.cloudflare/telemetry/: README.md  schema.sql  wrangler.jsonc
.github/tau/: pr-reviewer-system.md
.github/workflows/: cd.yml  pr-review.yml
.tau/: mcp-cache.json  mcp.json  settings.json
.tau/extensions/: ask_user.py
docs/: architecture.md  auth.md  cli-reference.md  creating-tools.md  development.md  docs.json  engine.md  extension-settings.md  extensions.md  http-proxy.md  index.md  inference-providers.md  inference.md  installation.md  keybindings.md  messages.md  packages.md  project-context.md  project-structure.md  prompts.md  python-api.md  quickstart.md  rpc.md  security.md  sessions.md  settings.md  skills.md  themes.md  tools.md  tui.md  usage.md
tau/: __init__.py
tau/agent/: embedded.py  service.py  types.py
tau/auth/: manager.py  storage.py
tau/commands/: registry.py  types.py
tau/console/: cli.py
tau/core/: registry.py
tau/engine/: __init__.py  service.py  types.py
tau/extensions/: __init__.py  api.py  context.py  events.py  loader.py  runtime.py
tau/hooks/: __init__.py  engine.py  inference.py  runtime.py  service.py  session.py  types.py
tau/inference/: __init__.py  types.py  utils.py
tau/message/: types.py  utils.py
tau/resources/: __init__.py  loader.py  types.py
tau/runtime/: dependencies.py  service.py  types.py
tau/session/: branch_summarization.py  compaction.py  export.py  manager.py  types.py  utils.py
tau/settings/: manager.py  paths.py  storage.py  types.py  utils.py
tau/skills/: registry.py
tau/telemetry/: __init__.py  service.py  types.py
tau/themes/: loader.py  registry.py
tau/tool/: types.py  (+2 more)
tests/: conftest.py  ext_loader.py  render_helpers.py  test_agent_abort.py  test_agent_compaction.py  test_agent_embedded.py  test_agent_hooks.py  test_agent_prompt.py  test_agent_types.py  test_ansi.py  test_ansi_bridge_legacy_image.py  test_anthropic_tool_history.py  test_ask_user_extension.py  test_audio_transcription_apis.py  test_auth_command.py  test_auth_manager.py  test_auth_storage.py  test_autocomplete_modifiers.py  test_autocomplete_render_width.py  test_autoresearch_abort.py  test_autoresearch_extension.py  test_branch_navigation.py  test_branch_summarization.py  test_builtin_tools.py  test_builtin_watch.py  test_cli_inputs.py  test_cmd_copy.py  test_command_execution_policy.py  test_command_registry.py  test_compaction.py  test_component_buffer_bridge.py  test_diff.py  test_doctor.py  test_editor_protocol.py  test_engine_execution.py  test_engine_length_and_live_tools.py  test_engine_steering.py  test_engine_types.py  test_escape_behavior.py  test_extension_api.py  (+139 more)
(+471 files in other folders)
