[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tau-coding-agent"
version = "0.8.2"
description = "A self-extensible agent CLI with terminal UI, multi-provider LLM support, session management with branching, and a plugin system for tools and commands"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "anthropic==0.109.1",
    "certifi==2026.5.20",
    "click==8.4.1",
    "filelock==3.29.3",
    "google-genai==2.8.0",
    "httpx==0.28.1",
    "mistralai==2.4.9",
    "ollama==0.6.2",
    "openai==2.41.1",
    "packaging==26.2",
    "pillow==12.2.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "uuid7==0.1.0",
    "websockets==16.0",
    "mistletoe==1.5.1",
    "pyyaml==6.0.2",
    "pygments==2.20.0",
    "pathspec==1.1.1",
    "posthog==7.21.3",
    "pylatexenc==2.10",
    "gitpython==3.1.50",
    "grapheme==0.6.0",
    "arrow==1.4.0",
    "kiwisolver==1.5.0",
    "tiktoken==0.13.0",
    "rapidfuzz==3.14.3",
    "pyxclip==0.2.3",
    "ddgs>=9.14.4",
]

[project.scripts]
tau = "tau.console.cli:main"

[tool.uv]
# Supply chain security: enforce exact version pinning for direct dependencies
# This prevents unexpected dependency updates that could introduce vulnerabilities
resolution = "highest"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Literal SSE wire payloads — data lines must stay single-line to be valid
"tests/test_provider_raw_response_hook.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Only the `tau` import package is shipped. Its non-Python data files (builtins,
# bundled skills/prompts/themes) are included automatically.
[tool.hatch.build.targets.wheel]
packages = ["tau"]
# A stray empty settings file in the source tree that must not ship.
exclude = ["tau/.tau"]

# The system prompt points the model at Tau's docs (tau/agent/prompt/builder.py).
# They live at the repo root, outside the import package, so they are staged into
# `tau/` at build time; get_docs_dir() then resolves them from site-packages.
# Editable installs skip this and read the working tree directly.
[tool.hatch.build.targets.wheel.force-include]
"docs" = "tau/docs"
"README.md" = "tau/README.md"

# The sdist keeps the natural repo layout (docs/ at root); only the wheel relocates.
[tool.hatch.build.targets.sdist]
include = ["tau", "docs", "examples", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
tools = ["ripgrep>=14.0.0"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.4.0",
    "mypy==1.19.1",
    "pyright>=1.1.360",
    "pytest-asyncio==1.3.0",
]
